--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -16,137 +16,140 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses />.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>com.devexperts.aprof</groupId>
-		<artifactId>aprof</artifactId>
-		<version>31-SNAPSHOT</version>
-	</parent>
+    <parent>
+        <groupId>com.devexperts.aprof</groupId>
+        <artifactId>aprof</artifactId>
+        <version>31-SNAPSHOT</version>
+    </parent>
 
-	<packaging>jar</packaging>
+    <packaging>jar</packaging>
 
-	<artifactId>agent</artifactId>
-	<name>Aprof Agent</name>
+    <artifactId>agent</artifactId>
+    <name>Aprof Agent</name>
 
-	<dependencies>
-		<dependency>
-			<groupId>com.devexperts.aprof</groupId>
-			<artifactId>core</artifactId>
-			<version>31-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>com.devexperts.aprof</groupId>
-			<artifactId>transformer</artifactId>
-			<version>31-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>com.devexperts.aprof</groupId>
-			<artifactId>selftest</artifactId>
-			<version>31-SNAPSHOT</version>
-		</dependency>
-	</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>com.devexperts.aprof</groupId>
+            <artifactId>core</artifactId>
+            <version>31-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.devexperts.aprof</groupId>
+            <artifactId>transformer</artifactId>
+            <version>31-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.devexperts.aprof</groupId>
+            <artifactId>selftest</artifactId>
+            <version>31-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
-	<build>
-		<finalName>aprof</finalName>
-		<plugins>
-			<plugin>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<excludeArtifactIds>core,junit</excludeArtifactIds>
-							<outputDirectory>${project.build.outputDirectory}</outputDirectory>
-							<stripVersion>true</stripVersion>
-						</configuration>
-					</execution>
-					<execution>
-						<id>unpack-dependencies</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>unpack-dependencies</goal>
-						</goals>
-						<configuration>
-							<includeArtifactIds>core</includeArtifactIds>
-							<outputDirectory>${project.build.outputDirectory}</outputDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+    <build>
+        <finalName>aprof</finalName>
+        <plugins>
+            <plugin>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <excludeArtifactIds>core,junit</excludeArtifactIds>
+                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
+                            <stripVersion>true</stripVersion>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>unpack-dependencies</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>unpack-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <includeArtifactIds>core</includeArtifactIds>
+                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
-			<plugin>
-				<artifactId>maven-jar-plugin</artifactId>
-				<configuration>
-					<archive>
-						<addMavenDescriptor>false</addMavenDescriptor>
-						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
-					</archive>
-				</configuration>
-			</plugin>
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <addMavenDescriptor>false</addMavenDescriptor>
+                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+                    </archive>
+                </configuration>
+            </plugin>
 
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>aprof-bin-assembly</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<finalName>${project.build.finalName}-${project.version}</finalName>
-							<descriptors>
-								<descriptor>src/assembly/bin.xml</descriptor>
-							</descriptors>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>aprof-bin-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <finalName>${project.build.finalName}-${project.version}</finalName>
+                            <descriptors>
+                                <descriptor>src/assembly/bin.xml</descriptor>
+                            </descriptors>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
-			<plugin>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>aprof-selftest</id>
-						<phase>integration-test</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-							<skip>${skipTests}</skip>
-							<target>
-								<!-- default configuration -->
-								<java fork="true" dir="${project.build.directory}" jar="${project.build.directory}/aprof.jar" failonerror="true">
-									<jvmarg value="-ea" />
-									<jvmarg value="-javaagent:aprof.jar" />
-									<arg value="selftest" />
-									<arg value="all" />
-								</java>
-								<!-- with Object.<init> instrumentation -->
-								<java fork="true" dir="${project.build.directory}" jar="${project.build.directory}/aprof.jar" failonerror="true">
-									<jvmarg value="-ea" />
-									<jvmarg value="-javaagent:aprof.jar=+unknown" />
-									<arg value="selftest" />
-									<arg value="all" />
-								</java>
-							</target>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<!-- Deploy to temporary staging directory -->
-			<plugin>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<configuration>
-					<skip>${deploy.skip}</skip>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>aprof-selftest</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <skip>${skipTests}</skip>
+                            <target>
+                                <!-- default configuration -->
+                                <java fork="true" dir="${project.build.directory}"
+                                      jar="${project.build.directory}/aprof.jar" failonerror="true">
+                                    <jvmarg value="-ea"/>
+                                    <jvmarg value="-javaagent:aprof.jar"/>
+                                    <arg value="selftest"/>
+                                    <arg value="all"/>
+                                </java>
+                                <!-- with Object.<init> instrumentation -->
+                                <java fork="true" dir="${project.build.directory}"
+                                      jar="${project.build.directory}/aprof.jar" failonerror="true">
+                                    <jvmarg value="-ea"/>
+                                    <jvmarg value="-javaagent:aprof.jar=+unknown"/>
+                                    <arg value="selftest"/>
+                                    <arg value="all"/>
+                                </java>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- Deploy to temporary staging directory -->
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>${deploy.skip}</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
