--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
 		<module>selftest</module>
 		<module>agent</module>
 		<module>benchmark</module>
+		<module>plugin</module>
 	</modules>
 
 	<profiles>
